Actually fix the overlap issue with sidebar without breaking responsivness.

--- a/skeleton/static/css/main.css
+++ b/skeleton/static/css/main.css
@@ -22,20 +22,20 @@
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         letter-spacing: -1px;
         font-weight: bold; }
-    nav ul {
+    section ul {
         float: left;  }
-    nav ul li {
+    section ul li {
         display: block;
         margin-bottom: 10px; }
-    nav ul li a,
-    nav ul li a:visited,
-    nav ul li a:active  {
+    section ul li a,
+    section ul li a:visited,
+    section ul li a:active  {
         font-size: 14px;
         color: #555;
         text-decoration: none;
         font-weight: bold; }
-    nav ul li a:hover,
-    nav ul li a:focus {
+    section ul li a:hover,
+    section ul li a:focus {
         color: #222; }
     header h1 {
         font-size: 52px;
